Dokoncena lekce 138 - formular - tvorba formulare, odeslani, metoda GET a POST

--- a/funnypage/jokesapp/templates/jokesapp/index.html
+++ b/funnypage/jokesapp/templates/jokesapp/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Dokument</title>
 </head>
+
 <body>
 
-<h1>Jokes</h1>
+    <form method="POST">
+        <label for="visitorname">Vaše jméno:</label>
+        <input type="text" id="visitorname" name="username">
+        <button type="submit">Odeslat</button>
+    </form>
 
 </body>
+
 </html>
