--- a/funnypage/jokesapp/templates/jokesapp/index.html
+++ b/funnypage/jokesapp/templates/jokesapp/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <form method="POST">
+    <form method="POST" action="/">
         {% csrf_token %}
         <label for="visitorname">Vaše jméno:</label>
         <input type="text" id="visitorname" name="username">
