--- a/funnypage/jokesapp/templates/jokesapp/index.html
+++ b/funnypage/jokesapp/templates/jokesapp/index.html
@@ -12,14 +12,16 @@
 <!--        Toto je csrt token pro zabezpeceni-->
         {% csrf_token %}
 
-<!--        Pokud je empty_username true (řeší se ve views.py), tak se zobrazi chyba a formular se neodesle-->
-        {% if empty_username %}
-        <p class="error">Musíte zadat jméno</p>
-        {% endif %}
+<!--&lt;!&ndash;        Pokud je empty_username true (řeší se ve views.py), tak se zobrazi chyba a formular se neodesle&ndash;&gt;-->
+<!--        {% if empty_username %}-->
+<!--        <p class="error">Musíte zadat jméno</p>-->
+<!--        {% endif %}-->
 
-<!--        Toto je samotny formular-->
-        <label for="visitorname">Vaše jméno:</label>
-        <input type="text" id="visitorname" name="username">
+<!--&lt;!&ndash;        Toto je samotny formular&ndash;&gt;-->
+<!--        <label for="visitorname">Vaše jméno:</label>-->
+<!--        <input type="text" id="visitorname" name="username">-->
+
+        {{ jokeForm }}
         <button type="submit">Odeslat</button>
 
     </form>
