--- a/funnypage/jokesapp/static/jokesapp/style.css
+++ b/funnypage/jokesapp/static/jokesapp/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -17,13 +19,17 @@ body {
     color: white;
 }
 
-form label {
-    display: block;
-    margin-right: 5px;
+form input, form textarea {
+    outline: none;
+    width: 200px;
+    margin: 5px 0;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
 }
 
-form input {
-    outline: none;
+form input::placeholder, form textarea::placeholder {
+    font-family: "Roboto", sans-serif;
 }
 
 form button {
