Dokoncena lekce 150 - formular - vypsani formulare pomoci cyklu for

--- a/funnypage/jokesapp/templates/jokesapp/index.html
+++ b/funnypage/jokesapp/templates/jokesapp/index.html
@@ -18,23 +18,32 @@
             <!--    Toto je csrt token pro zabezpeceni-->
             {% csrf_token %}
 
-            <!--    Vložení formulare, který řešíme ve views.py-->
-            <div class="form-inputs {% if jokeForm.user_name.errors %}errors{% endif %}">
-                {{ jokeForm.user_name.errors }}
-                {{ jokeForm.user_name }}
-            </div>
+            <!-- Vypsání jednotlivých inputu ve formulari pomoci cyklu for -->
+            {% for one_field in jokeForm %}
+                <div class="form-inputs {% if one_field.user_name.errors %}errors{% endif %}">
+                    {{ one_field.errors }}
+                    {{ one_field }}
+                </div>
+            {% endfor %}
 
+<!--            Vypsání jednotlivých inputu ve formulari pomoci jednotlicvych kroku = lepší je pomocí cyklu for-->
             <!--    Vložení formulare, který řešíme ve views.py-->
-            <div class="form-inputs {% if jokeForm.user_name.errors %}errors{% endif %}">
-                {{ jokeForm.joke_text.errors }}
-                {{ jokeForm.joke_text }}
-            </div>
+<!--            <div class="form-inputs {% if jokeForm.user_name.errors %}errors{% endif %}">-->
+<!--                {{ jokeForm.user_name.errors }}-->
+<!--                {{ jokeForm.user_name }}-->
+<!--            </div>-->
 
-            <!--    Vložení formulare, který řešíme ve views.py-->
-            <div class="form-inputs {% if jokeForm.user_name.errors %}errors{% endif %}">
-                {{ jokeForm.rating.errors }}
-                {{ jokeForm.rating }}
-            </div>
+<!--            &lt;!&ndash;    Vložení formulare, který řešíme ve views.py&ndash;&gt;-->
+<!--            <div class="form-inputs {% if jokeForm.joke_text.errors %}errors{% endif %}">-->
+<!--                {{ jokeForm.joke_text.errors }}-->
+<!--                {{ jokeForm.joke_text }}-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash;    Vložení formulare, který řešíme ve views.py&ndash;&gt;-->
+<!--            <div class="form-inputs {% if jokeForm.rating.errors %}errors{% endif %}">-->
+<!--                {{ jokeForm.rating.errors }}-->
+<!--                {{ jokeForm.rating }}-->
+<!--            </div>-->
 
             <button type="submit">Odeslat</button>
 
