--- a/funnypage/jokesapp/templates/jokesapp/thank-you.html
+++ b/funnypage/jokesapp/templates/jokesapp/thank-you.html
@@ -5,7 +5,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Děkujeme za vyplnění</h1>
+
+    <section class="thanks">
+        <h1>Děkujeme za vyplnění</h1>
+
+        <a href="{% url 'all-jokes-url' %}">Všechny vtipy</a>
+
+    </section>
+
 
 </body>
 </html>
