--- a/funnypage/jokesapp/templates/jokesapp/thank-you.html
+++ b/funnypage/jokesapp/templates/jokesapp/thank-you.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
+{% load static %}
+
+{{ '<' }}{{ '!DOCTYPE html>' }}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'jokesapp/thank-you.css' %}">
+
 </head>
 <body>
 
